--- a/manifest-allocations.yml
+++ b/manifest-allocations.yml
@@ -2,10 +2,12 @@ applications:
 - name: tracker-allocations
   path: ./applications/allocations-server/build/libs/allocations-server.jar
   routes:
-  - route: allocations-pal-sagar.apps.dev.pcf-aws.com
-  memory: 1G
+  - route: allocations-pal-sagar.cfapps.io
+  memory: 400M
+  disk-quota: 400M
   instances: 1
   env:
+    JAVA_OPTS: '-XX:MaxMetaspaceSize=80780K -Xss512k -Xmx200M -XX:ReservedCodeCacheSize=16M -XX:MaxDirectMemorySize=16M'
     JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 11.+ } }'
   services:
   - tracker-allocations-database
