--- a/manifest-backlog.yml
+++ b/manifest-backlog.yml
@@ -2,10 +2,12 @@ applications:
 - name: tracker-backlog
   path: ./applications/backlog-server/build/libs/backlog-server.jar
   routes:
-  - route: backlog-pal-sagar.apps.dev.pcf-aws.com
-  memory: 1G
+  - route: backlog-pal-sagar.cfapps.io
+  memory: 400M
+  disk-quota: 400M
   instances: 1
   env:
+    JAVA_OPTS: '-XX:MaxMetaspaceSize=80780K -Xss512k -Xmx200M -XX:ReservedCodeCacheSize=16M -XX:MaxDirectMemorySize=16M'
     JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 11.+ } }'
   services:
   - tracker-backlog-database
