--- a/manifest-timesheets.yml
+++ b/manifest-timesheets.yml
@@ -2,10 +2,12 @@ applications:
 - name: tracker-timesheets
   path: ./applications/timesheets-server/build/libs/timesheets-server.jar
   routes:
-  - route: timesheets-pal-sagar.apps.dev.pcf-aws.com
-  memory: 1G
+  - route: timesheets-pal-sagar.cfapps.io
+  memory: 500M
+  disk-quota: 400M
   instances: 1
   env:
+    JAVA_OPTS: '-XX:MaxMetaspaceSize=80780K -Xss512k -Xmx200M -XX:ReservedCodeCacheSize=16M -XX:MaxDirectMemorySize=16M'
     JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 11.+ } }'
   services:
   - tracker-timesheets-database
