--- a/manifest-allocations.yml
+++ b/manifest-allocations.yml
@@ -2,12 +2,10 @@ applications:
 - name: tracker-allocations
   path: ./applications/allocations-server/build/libs/allocations-server.jar
   routes:
-  - route: allocations-pal-sagar.cfapps.io
-  memory: 400M
-  disk-quota: 400M
+  - route: allocations-pal-sagar.apps.dev.pcf-aws.com
+  memory: 1G
   instances: 1
   env:
-    JAVA_OPTS: '-XX:MaxMetaspaceSize=150M -Xss512k -Xmx200M -XX:ReservedCodeCacheSize=16M -XX:MaxDirectMemorySize=16M'
     JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 11.+ } }'
     GRANT_TYPE: client_credentials
   services:
