--- a/applications/allocations-server/src/main/resources/application.properties
+++ b/applications/allocations-server/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8081
 spring.datasource.username=tracker
 spring.datasource.url=jdbc:mysql://localhost:3306/tracker_allocations_dev?useSSL=false&useTimezone=true&serverTimezone=UTC&useLegacyDatetimeCode=false
 management.endpoint.health.show-details=always
-management.endpoints.web.exposure.include=env,health
+management.endpoints.web.exposure.include=*
 security.oauth2.resource.token-info-uri=http://localhost:8999/oauth/check_token
 security.oauth2.client.access-token-uri=http://localhost:8999/oauth/token
 security.oauth2.client.grant-type=client_credentials
